# Vestin

./: .gitignore  README.md
.github/workflows/: ci-cd.yml
doc/: CONFIGURE.md  INSTALL.md  TESTING.md  UPLOAD.md
src/: README.md  program_launcher.py  pyproject.toml  toml_gen.py
src/vestin/: about.py  desktop.py  program.py
src/vestin/modules/: mathfin.py  wtab1.py  wtab1_old.py  wtab3.py
