[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vestin"
version = "0.1.2"
description = "Program to calculate compound interest"
readme = "README.md"
authors = [{name = "Fernando Pujaico Rivera", email = "fernando.pujaico.rivera@gmail.com"}]
maintainers = [{name = "Fernando Pujaico Rivera", email = "fernando.pujaico.rivera@gmail.com"}]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-only WITH Classpath-Exception-2.0 OR BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["finance", "compound interest"]
dependencies = [
    "PyQt5"
]

[project.urls]
"Bug Reports" = "https://github.com/trucomanx-desktop/Vestin/issues"
"Funding" = "https://trucomanx.github.io/en/funding.html"
"Documentation" = "https://github.com/trucomanx-desktop/Vestin/tree/main/doc"
"Source" = "https://github.com/trucomanx-desktop/Vestin"

[project.scripts]
"vestin" = "vestin.program:main"

[tool.setuptools]
packages = ["vestin", "vestin.modules"]

[tool.setuptools.package-data]
"vestin" = ["icons/*.png"]
